force-app/main/default/objects/vlocity_ins__ApplicationPartyRelationship__c/fields/vlocity_ins__ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ApplicationId__c</fullName>
    <label>Application</label>
    <referenceTo>vlocity_ins__Application__c</referenceTo>
    <relationshipLabel>Application Party Relationships</relationshipLabel>
    <relationshipName>ApplicationPartyRelationships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>