force-app/main/default/objects/vlocity_ins__ApplicationPartyRelationship__c/fields/vlocity_ins__PartyId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PartyId__c</fullName>
    <label>Client</label>
    <referenceTo>vlocity_ins__Party__c</referenceTo>
    <relationshipLabel>Application Party Relationships</relationshipLabel>
    <relationshipName>ApplicationPartyRelationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>