force-app/main/default/objects/vlocity_ins__ApplicationPartyRelationship__c/fields/vlocity_ins__ProductionCodeId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProductionCodeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the production code to use when writing the insurance.</description>
    <label>Production Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>vlocity_ins__ProductionCode__c.vlocity_ins__IsWritingCode__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>vlocity_ins__ProductionCode__c</referenceTo>
    <relationshipLabel>Application Party Relationships</relationshipLabel>
    <relationshipName>ApplicationPartyRelationships</relationshipName>
    <type>Lookup</type>
</CustomField>