force-app/main/default/objects/vlocity_ins__ApplicationPartyRelationship__c/fields/vlocity_ins__SplitPercentage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SplitPercentage__c</fullName>
    <description>Commission split percentage for producer relationships.</description>
    <label>Split Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>